# r2da-IA_developer_chalange

./: .gitignore  README.md  main.py  pyproject.toml
