[project]
name = "desafio r2da I.A developer- Wellington Tezotto."
version = "0.1.0"
description = "Script para avaliação de PDFS com imagens, decidindo o Score com base na nitidez, contraste e ruido, utilizando visão computacional com OpenCv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
]
